# sonarr_youtubedl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.yml.template  sonarr_youtubedl.py  utils.py
